refactored html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="/images/notion-avatar.png">
+    <link rel="icon" href="images/notion-avatar.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
@@ -16,16 +16,16 @@
 
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="/images/c3.png" alt="cloud-img">
+        <img class="top-cloud" src="images/c3.png" alt="cloud-img">
         <h1>I'm Huzaif.</h1>
         <h2>a <span class="subtitle">dev</span>eloper.</h2>
-        <img class="city" src="/images/city.png" alt="city-img">
-        <img class="bottom-cloud" src="/images/c3.png" alt="cloud-img">
-        <img class="bottom-cloud2" src="/images/c3.png" alt="cloud-img">
+        <img class="city" src="images/city.png" alt="city-img">
+        <img class="bottom-cloud" src="images/c3.png" alt="cloud-img">
+        <img class="bottom-cloud2" src="images/c3.png" alt="cloud-img">
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img class="illustrators" src="/images/Humaaans - Space.png" alt="">
+            <img class="illustrators" src="images/Humaaans - Space.png" alt="">
             <h2>Hello.</h2>
             <p>I am a Web developer with some basic knowledge who loves to code</p>
         </div>
@@ -33,7 +33,7 @@
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="illustrators" src="/images/Humaaans - 1 Character.png" alt="">
+                <img class="illustrators" src="images/Humaaans - 1 Character.png" alt="">
                 <h3>Html & CSS</h3>
                 <p>HTML (the Hypertext Markup Language) and CSS (Cascading Style Sheets) are two of the core
                     technologies for building Web
@@ -41,7 +41,7 @@
                     devices.</p>
             </div>
             <div class="skill-row">
-                <img class="illustrators" src="/images/Humaaans - 1 Character.png" alt="">
+                <img class="illustrators" src="images/Humaaans - 1 Character.png" alt="">
                 <h3>Java</h3>
                 <p>ava is the official language for Android mobile app development. In fact, the Android operating
                     system itself is written
@@ -52,14 +52,14 @@
         <div class="Work">
             <h2>My Work.</h2>
             <div class="skill-row">
-                <img class="illustrators" src="/images/Humaaans - Wireframe.png" alt="">
+                <img class="illustrators" src="images/Humaaans - Wireframe.png" alt="">
                 <h3>Hasbasoft</h3>
                 <p>Hasbasoft is information technology services and consulting company headquartered in Mumbai and
                     Thane, Maharashtra,
                     India.</p>
             </div>
             <div class="skill-row">
-                <img class="illustrators" src="/images/Humaaans - Wireframe.png" alt="">
+                <img class="illustrators" src="images/Humaaans - Wireframe.png" alt="">
                 <h3>Ilmtec</h3>
                 <p>Build better and outstanding products with us. Make your dream digital product a reality with the
                     help of our talented
@@ -68,7 +68,7 @@
             <hr>
             <div class="contact-me">
                 <h2>Get In Touch</h2>
-                <img class="illustrators" src="/images/Humaaans - 3 Characters.png" alt="">
+                <img class="illustrators" src="images/Humaaans - 3 Characters.png" alt="">
                 <h3>If you love programming and wanna build something then lets connect</h3>
                 <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.
                 </p>
